<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingBottom="4dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="8dp" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/frame_dialog_title"
        android:text="@string/dialog_distance_title"
        android:textColor="@android:color/black" />
    
    <Button
        android:id="@+id/bt_3km"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="left"
        android:onClick="onDialogClick"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:text="@string/kilometre_3"
        android:textColor="@android:color/black" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@drawable/h_dotted_line" />

    <Button
        android:id="@+id/bt_5km"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="left"
        android:onClick="onDialogClick"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:text="@string/kilometre_5"
        android:textColor="@android:color/black" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@drawable/h_dotted_line" />

    <Button
        android:id="@+id/bt_8km"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="left"
        android:onClick="onDialogClick"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:text="@string/kilometre_8"
        android:textColor="@android:color/black" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@drawable/h_dotted_line" />

    <Button
        android:id="@+id/bt_10km"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="left"
        android:onClick="onDialogClick"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:text="@string/kilometre_10"
        android:textColor="@android:color/black" />

</LinearLayout>